--- a/Exercicios/ex022/fundo004.html
+++ b/Exercicios/ex022/fundo004.html
@@ -6,7 +6,13 @@
     <title>Posicionamento</title>
     <style>
         body{
-            
+            height: 98vh;
+            border: 1px dashed;
+            background-image: url("https://gustavoguanabara.github.io/html-css/imagens/mascote.png");
+            background-size: 100px;
+            background-repeat: no-repeat;
+            background-position: center center;
+
         }
     </style>
 </head>
