--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabelas</title>
+    <style>
+        body{
+            font-family:Arial, Helvetica, sans-serif ;
+        }
+
+        table{
+            width: 500px;
+            height: 20px;
+            border-collapse: collapse;
+        }
+        td , th {
+            border: 1px solid black
+        }
+        thead,tfoot{
+            background-color: grey;
+            color:white;
+        }
+        td.num{
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
+    <h1>Uso de tabelas grandes</h1>
+    <table>
+        <caption>População das Unidades Federativas</caption>
+        <thead>
+            <tr>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td >São Paulo</td>
+                <td class="num">45 973 194</td>
+            </tr>
+
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 322 691</td>
+            </tr>
+
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17 219 679</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 850 513</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <th scope="row">Total de habitantes</th>
+            <td><strong>99.366.077</strong></td>
+        </tfoot>
+    </table>
+     
     
 </body>
 </html>
