--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -13,6 +13,12 @@
             width: 500px;
             height: 20px;
             border-collapse: collapse;
+            position: relative;
+        }
+        thead > tR > th{
+         position: sticky;   
+         top: 0;
+         background-color: black;
         }
         td , th {
             border: 1px solid black
@@ -23,6 +29,10 @@
         }
         td.num{
             text-align: right;
+        }
+        tbody tr:nth-child(odd){
+            background-color: #90a6c7;
+
         }
     </style>
 </head>
@@ -38,30 +48,42 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td >São Paulo</td>
-                <td class="num">45 973 194</td>
-            </tr>
-
-            <tr>
-                <td>Minas Gerais</td>
-                <td class="num">21 322 691</td>
-            </tr>
-
-            <tr>
-                <td>Rio de Janeiro</td>
-                <td class="num">17 219 679</td>
-            </tr>
-            <tr>
-                <td>Bahia</td>
-                <td class="num">14 850 513</td>
+            <tr><td>São Paulo</td><td class="num">45.973.194</td></tr>
+            <tr><td>Minas Gerais</td><td class="num">21.322.691</td></tr>
+            <tr><td>Rio de Janeiro</td><td class="num">17.219.679</td></tr>
+            <tr><td>Bahia</td><td class="num">14.850.513</td></tr>
+            <tr><td>Paraná</td><td class="num">11.824.665</td></tr>
+            <tr><td>Rio Grande do Sul</td><td class="num">11.229.915</td></tr>
+            <tr><td>Pernambuco</td><td class="num">9.539.029</td></tr>
+            <tr><td>Ceará</td><td class="num">9.233.656</td></tr>
+            <tr><td>Pará</td><td class="num">8.664.306</td></tr>
+            <tr><td>Santa Catarina</td><td class="num">8.058.441</td></tr>
+            <tr><td>Goiás</td><td class="num">7.350.483</td></tr>
+            <tr><td>Maranhão</td><td class="num">7.010.960</td></tr>
+            <tr><td>Amazonas</td><td class="num">4.281.209</td></tr>
+            <tr><td>Paraíba</td><td class="num">4.145.040</td></tr>
+            <tr><td>Espírito Santo</td><td class="num">4.102.129</td></tr>
+            <tr><td>Mato Grosso</td><td class="num">3.836.399</td></tr>
+            <tr><td>Rio Grande do Norte</td><td class="num">3.446.071</td></tr>
+            <tr><td>Piauí</td><td class="num">3.375.646</td></tr>
+            <tr><td>Alagoas</td><td class="num">3.220.104</td></tr>
+            <tr><td>Distrito Federal</td><td class="num">2.982.818</td></tr>
+            <tr><td>Mato Grosso do Sul</td><td class="num">2.901.895</td></tr>
+            <tr><td>Sergipe</td><td class="num">2.291.077</td></tr>
+            <tr><td>Rondônia</td><td class="num">1.746.227</td></tr>
+            <tr><td>Tocantins</td><td class="num">1.577.342</td></tr>
+            <tr><td>Acre</td><td class="num">880.631</td></tr>
+            <tr><td>Amapá</td><td class="num">802.837</td></tr>
+            <tr><td>Roraima</td><td class="num">716.793</td></tr>
             </tr>
         </tbody>
         <tfoot>
             <th scope="row">Total de habitantes</th>
-            <td><strong>99.366.077</strong></td>
+            <td class="num"><strong> 212.583.750</strong></td>
         </tfoot>
     </table>
+
+    <P >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta molestiae, sequi facilis aperiam quae aspernatur incidunt a eius quaerat assumenda dolore porro, sit autem sunt explicabo distinctio quasi! Dolorem,Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta molestiae, sequi facilis aperiam quae aspernatur incidunt a eius quaerat assumenda dolore porro, sit autem sunt explicabo distinctio quasi! Dolorem ,Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta molestiae, sequi facilis aperiam quae aspernatur incidunt a eius quaerat assumenda dolore porro, sit autem sunt explicabo distinctio quasi! Dolorem,Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta molestiae, sequi facilis aperiam quae aspernatur incidunt a eius quaerat assumenda dolore porro, sit autem sunt explicabo distinctio quasi! Dolorem,Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta molestiae, sequi facilis aperiam quae aspernatur incidunt a eius quaerat assumenda dolore porro, sit autem sunt explicabo distinctio quasi! Dolorem </P>
      
     
 </body>
