--- a/Exercicios/ex024/iframe002.html
+++ b/Exercicios/ex024/iframe002.html
@@ -21,7 +21,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vitae reiciendis minus facilis magnam, possimus dolorem architecto deserunt veniam vero temporibus aliquid commodi voluptate placeat dolores molestiae consectetur sint ea.
     Lorem ipsum dolor sit amet consectetur adipisicing elit. At est eaque eveniet praesentium necessitatibus quidem laborum sequi quas vel! Iure voluptate excepturi, ea corporis iste eos! Laboriosam dolor sint rerum?
     </p>
-    <iframe src="pg001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pg001.html" frameborder="0" height="500" width="500">
+        <P>iNFELIZMENTE SEU NAVEGADOR NÃO É COMPATÍVEL</P>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vitae reiciendis minus facilis magnam, possimus dolorem architecto deserunt veniam vero temporibus aliquid commodi voluptate placeat dolores molestiae consectetur sint ea.
     Lorem ipsum dolor sit amet consectetur adipisicing elit. At est eaque eveniet praesentium necessitatibus quidem laborum sequi quas vel! Iure voluptate excepturi, ea corporis iste eos! Laboriosam dolor sint rerum?
