--- a/Exercicios/ex024/iframe003.html
+++ b/Exercicios/ex024/iframe003.html
@@ -29,7 +29,8 @@
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tenetur cum velit itaque doloremque consequuntur odio assumenda incidunt eius ducimus sunt praesentium rem facilis eum, non dolorum quasi veritatis molestias?</p>
 
-    <iframe id="tela" name="frame" >
+    <iframe id="tela" name="frame" srcdoc="<h1> Escolha uma das opçoes </h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quidem veniam quo ipsa. Doloribus modi consectetur amet saepe explicabo? Rem officia accusamus porro natus maiores itaque exercitationem quaerat, quas deleniti!</p>
+    ">
         infelizmente seu navegador não é compativel
     </iframe>
 
